tests/baselines/reference/pathMappingBasedModuleResolution1_node.errors.txt
c:/root/tsconfig.json(4,9): error TS5060: Option 'paths' cannot be used without specifying '--baseUrl' option.


==== c:/root/tsconfig.json (1 errors) ====
    // paths should error in the absence of baseurl
    {
        "compilerOptions": {
            "paths": {
            ~~~~~~~
!!! error TS5060: Option 'paths' cannot be used without specifying '--baseUrl' option.
                "*": [
                    "*",
                    "generated/*"
                ]
            }
        }
    }
    
==== c:/root/f1.ts (0 errors) ====
    export var x = 1;
    